# copper

./: .gitignore  Cargo.toml  LICENSE  flake.nix  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  unsafe_ptr.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
