[package]
name = "copper"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "copper"
test = false
bench = false

[dependencies]
bootloader = "0.9"
# volatile = "0.2.6"
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]
